--- a/src/mainPage/main.css
+++ b/src/mainPage/main.css
@@ -236,6 +236,7 @@ body::-webkit-scrollbar{
     overflow: hidden;
     width: 100vw;
     height: 100%;
+    padding: 7rem 2rem;
   }
 
   .world-image{
@@ -257,6 +258,7 @@ body::-webkit-scrollbar{
   
   .about-left-image {
    width: 50%;
+   padding: 3rem;
    
   }
   
